--- a/03_02_02_id3_algorithm.ipynb
+++ b/03_02_02_id3_algorithm.ipynb
@@ -62,12 +62,12 @@
     "\n",
     "$$ P(short) * H(short) + P(not\\_short) * H(not\\_short) = \\frac{7}{20} * .863 + \\frac{13}{20} * .779 = .809 $$\n",
     "\n",
-    "So our entropy from this question would go from .971 to .809. That's an improvement. Use the space below to calculate the entropy of the other criteria, for we asked whether the students were tall or medium."
+    "Entropy from this question improves from .971 to .809 (1 uncertain, 0 certain). Calculate the entropy of the other criteria: whether students were tall or medium."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,6 @@
     "from math import log2\n",
     "\n",
     "#calculate entropy for tall and medium\n",
-    "\n",
     "#medium\n",
     "H_med = (6/8) * (log2(8/6)) + (2/8) * (log2(8/2))\n",
     "H_not_med = (6/12) * log2(12/6) + (6/12) * (log2(12/6))\n",
@@ -134,6 +133,42 @@
     "            {a<sub>i</sub>}) and repeat the algorithm\n",
     "\n",
     "</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Explanation:__\n",
+    "\n",
+    "- First create a root node\n",
+    "\n",
+    "- Next two lines say that if you're already exclusively one class, just label with that class\n",
+    "\n",
+    "- Similarly the following line says that if you don't have any attributes left you're also done, labeling with the most common outcome\n",
+    "\n",
+    "- Now start real algorithm; first you have to find the best attribute by calculating entropies for all possible values. The attribute value pair with the lowest entropy is then the best attribute and the attribute you give to the node\n",
+    "\n",
+    "- You use that rule to split the node, creating subsets of observations; there are then two new nodes, each with a subset of the observations corresponding to the rule\n",
+    "\n",
+    "- If obsevations are null then label with the dominant outcome\n",
+    "\n",
+    "- Otherwise at each new node start the algorithm again\n",
+    "\n",
+    "__Solution is not necessarily optimal:__\n",
+    "\n",
+    "- Tree can get stuck in local optima (like with the gradient descent algorithm)\n",
+    "\n",
+    "- Tree has no way to work backwards if it finds itself in an informationless space; can add criteria to make it stop before the tree has grown to run out of attributes or all leaf nodes are single classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drill\n",
+    "\n",
+    "See if you can match pseudocode steps to the code in [this real](https://github.com/NinjaSteph/DecisionTree/blob/master/sna2111_DecisionTree/DecisionTree.py) ID3 Algorithm in python"
    ]
   },
   {
