--- a/03_02_03_random_forest.ipynb
+++ b/03_02_03_random_forest.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Set parameters for both the tree and the forest\n",
     "- Trees have same parameters as before: depth, number of features, how the tree is built (entropy, [gini impurity](https://www.garysieling.com/blog/sklearn-gini-vs-entropy-criteria))\n",
-    "- Get to set the number of estimators (trees) to generate in the forest\n",
+    "- Set the number of estimators (trees) to generate in the forest\n",
     "- Number of trees is a tradeoff between amount of variance explained vs. computational complexity\n",
     "- Tune by increasing number of trees until the additional learning from another tree approaches zero\n",
     "\n",
