--- a/03_02_06_challenge_random_forest.ipynb
+++ b/03_02_06_challenge_random_forest.ipynb
@@ -317,14 +317,14 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.98275862 0.87931034 0.9122807  0.9122807  0.87719298 0.9122807\n",
-      " 0.9122807  0.89285714 0.91071429 0.96428571]\n",
+      " [0.86206897 0.93103448 0.87719298 0.94736842 0.9122807  0.87719298\n",
+      " 0.92982456 0.94642857 0.875      0.92857143]\n",
       "\n",
       " score array mean:\n",
-      " 0.9156241897848068\n",
+      " 0.9086963097398669\n",
       "\n",
       " runtime:\n",
-      " 0.028802000000000216 seconds\n"
+      " 0.028218999999999994 seconds\n"
      ]
     }
    ],
@@ -374,14 +374,14 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.98275862 0.9137931  0.92982456 0.94736842 0.96491228 0.98245614\n",
+      " [0.98275862 0.87931034 0.94736842 0.96491228 0.98245614 0.96491228\n",
       " 0.94736842 0.96428571 0.94642857 0.96428571]\n",
       "\n",
       " score array mean:\n",
-      " 0.9543481548699333\n",
+      " 0.9544086509376889\n",
       "\n",
       " runtime:\n",
-      " 0.18279699999999988 seconds\n"
+      " 0.18012400000000017 seconds\n"
      ]
     }
    ],
@@ -404,8 +404,19 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Random Forest consistently returns more accurate predictions with less variance than a single Decision Tree, but the RF model takes over six times longer to run."
+    "- Random Forest consistently returns more accurate predictions\n",
+    "\n",
+    "- RF scores show less variance than a single Decision Tree\n",
+    "\n",
+    "- RF takes over six times longer to run"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
