--- a/03_02_06_challenge_random_forest.ipynb
+++ b/03_02_06_challenge_random_forest.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -317,14 +317,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.86206897 0.93103448 0.87719298 0.94736842 0.9122807  0.87719298\n",
-      " 0.92982456 0.94642857 0.875      0.92857143]\n",
+      " [0.86206897 0.87931034 0.87719298 0.9122807  0.94736842 0.94736842\n",
+      " 0.89473684 0.92857143 0.92857143 0.94642857]\n",
       "\n",
-      " score array mean:\n",
-      " 0.9086963097398669\n",
+      "runtime:\n",
+      " 0.029609999999999914 seconds\n",
       "\n",
-      " runtime:\n",
-      " 0.028218999999999994 seconds\n"
+      "score array mean:\n",
+      " 0.9123898107337307\n",
+      "\n",
+      "score array std dev:\n",
+      " 0.030506110135382954\n"
      ]
     }
    ],
@@ -353,8 +356,9 @@
     "scores_tree = cross_val_score(decision_tree,X,Y,cv=cv)\n",
     "\n",
     "print('score array:\\n', scores_tree)\n",
-    "print('\\n score array mean:\\n', np.mean(scores_tree))\n",
-    "print('\\n runtime:\\n',time.clock() - start_time, \"seconds\")"
+    "print('\\nruntime:\\n',time.clock() - start_time, \"seconds\")\n",
+    "print('\\nscore array mean:\\n', np.mean(scores_tree))\n",
+    "print('\\nscore array std dev:\\n', np.std(scores_tree))"
    ]
   },
   {
@@ -366,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -374,14 +378,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.98275862 0.87931034 0.94736842 0.96491228 0.98245614 0.96491228\n",
+      " [0.96551724 0.9137931  0.94736842 0.94736842 1.         0.96491228\n",
       " 0.94736842 0.96428571 0.94642857 0.96428571]\n",
       "\n",
-      " score array mean:\n",
-      " 0.9544086509376889\n",
+      "runtime:\n",
+      " 0.2122989999999998 seconds\n",
       "\n",
-      " runtime:\n",
-      " 0.18012400000000017 seconds\n"
+      "score array mean:\n",
+      " 0.9561327888687234\n",
+      "\n",
+      "score std dev:\n",
+      " 0.02083190642065962\n"
      ]
     }
    ],
@@ -394,8 +401,9 @@
     "scores_rfc = cross_val_score(rfc,X,Y,cv=cv)\n",
     "\n",
     "print('score array:\\n', scores_rfc)\n",
-    "print('\\n score array mean:\\n', np.mean(scores_rfc))\n",
-    "print('\\n runtime:\\n',time.clock() - start_time, \"seconds\")"
+    "print('\\nruntime:\\n',time.clock() - start_time, \"seconds\")\n",
+    "print('\\nscore array mean:\\n', np.mean(scores_rfc))\n",
+    "print('\\nscore std dev:\\n', np.std(scores_rfc))"
    ]
   },
   {
@@ -406,17 +414,10 @@
     "\n",
     "- Random Forest consistently returns more accurate predictions\n",
     "\n",
-    "- RF scores show less variance than a single Decision Tree\n",
+    "- RF scores typically show less variance than a single Decision Tree\n",
     "\n",
-    "- RF takes over six times longer to run"
+    "- RF takes much longer to run"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
