--- a/03_05_02_gradient_boost.ipynb
+++ b/03_05_02_gradient_boost.ipynb
@@ -21,9 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gradient boosting\n",
-    "\n",
-    "Recall gradient descent algorithm\n",
+    "__Recall gradient descent algorithm:__\n",
     "- For regr model with n parameters, an n+1 dimensional space exists defined by all params plus the cost function to minimize\n",
     "- Combination of params and cost function define a surface within this space\n",
     "- Regr is fitting by moving 'downhill' until lowest point in the surface is reached\n",
