--- a/03_05_02_gradient_boost.ipynb
+++ b/03_05_02_gradient_boost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Result:__ performs very poorly, gradient boosting with weak learners much more effective than a single complex decision tree\n",
+    "__Result:__ single complex tree performs very poorly, gradient boosting with weak learners much more effective\n",
     "\n",
     "Gradient boosted decision trees often outperform random forests and are less prone to overfitting than individual decision trees\n",
     "\n",
