--- a/03_04_04_svm_guided_example_challenge.ipynb
+++ b/03_04_04_svm_guided_example_challenge.ipynb
@@ -422,11 +422,11 @@
     "grid = GridSearchCV(estimator=svc, param_grid=params)\n",
     "\n",
     "#uncomment below to run svm (might take a while)\n",
-    "#start_time = time.clock()\n",
-    "#grid.fit(X1,Y1)\n",
-    "#print('\\nBest parameters:\\n', grid.best_params_)\n",
-    "#print('\\nBest score:\\n', grid.best_score_)\n",
-    "#print('\\nruntime:\\n',time.clock() - start_time, \"seconds\")"
+    "start_time = time.clock()\n",
+    "grid.fit(X1,Y1)\n",
+    "print('\\nBest parameters:\\n', grid.best_params_)\n",
+    "print('\\nBest score:\\n', grid.best_score_)\n",
+    "print('\\nruntime:\\n',time.clock() - start_time, \"seconds\")"
    ]
   },
   {
