--- a/03_06_01_credit_card_fraud.ipynb
+++ b/03_06_01_credit_card_fraud.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -88,32 +88,7 @@
     "#combine with majority class\n",
     "df_upsampled = pd.concat([df_majority, df_minority_upsampled])\n",
     "print('Upsampled class counts:')\n",
-    "print(df_upsampled.Class.value_counts())\n",
-    "\n",
-    "#set data and target\n",
-    "X_up = df_upsampled.drop('Class', 1)\n",
-    "y_up = df_upsampled['Class']\n",
-    "\n",
-    "#set training and test sets\n",
-    "offset = int(X_up.shape[0] * 0.9)\n",
-    "X_up_train, y_up_train = X_up[:offset], y_up[:offset]\n",
-    "X_up_test, y_up_test = X_up[offset:], y_up[offset:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#also downsample (remove random obvs from majority class) to compare results\n",
-    "df_majority_downsampled = resample(df_majority, replace=False, n_samples=492)\n",
-    "df_downsampled = pd.concat([df_majority_downsampled, df_minority])\n",
-    "df_downsampled.Class.value_counts()\n",
-    "\n",
-    "#set data and target\n",
-    "X_down = df_downsampled.drop('Class', 1)\n",
-    "y_down = df_downsampled['Class']"
+    "print(df_upsampled.Class.value_counts())"
    ]
   },
   {
@@ -125,37 +100,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 kbest features:\n",
-      "['V4', 'V10', 'V11', 'V12', 'V14']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#selectkbest on upsampled df\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.feature_selection import SelectKBest, f_classif\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "#from sklearn.pipeline import make_pipeline\n",
+    "#from sklearn.feature_selection import SelectKBest, f_classif\n",
+    "#import warnings\n",
+    "#warnings.filterwarnings('ignore')\n",
     "\n",
-    "kbest = SelectKBest(f_classif, k=5) #instantiate\n",
-    "kbest.fit(X_up, y_up) #fit \n",
-    "mask_up = kbest.get_support()\n",
-    "features_up = []\n",
-    "for bool, feature in zip(mask_up, X_up.columns):\n",
-    "    if bool:\n",
-    "        features_up.append(feature)\n",
-    "print('5 kbest features:')\n",
-    "print(features_up)\n",
+    "#kbest = SelectKBest(f_classif, k=5) #instantiate\n",
+    "#kbest.fit(X_up, y_up) #fit \n",
+    "#mask_up = kbest.get_support()\n",
+    "#features_up = []\n",
+    "#for bool, feature in zip(mask_up, X_up.columns):\n",
+    "#    if bool:\n",
+    "#        features_up.append(feature)\n",
+    "#print('5 kbest features:')\n",
+    "#print(features_up)\n",
     "\n",
-    "X_kbest = df_upsampled[features_up]\n",
-    "X_kbest_train, X_kbest_test = X_kbest[:offset], X_kbest[offset:]"
+    "#X_kbest = df_upsampled[features_up]\n",
+    "#X_kbest_train, X_kbest_test = X_kbest[:offset], X_kbest[offset:]"
    ]
   },
   {
@@ -177,65 +143,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.99910116 1.         0.99985345 0.99996092 0.9039696 ]\n"
+      "score array:\n",
+      " [1. 1. 1. 1. 1.]\n",
+      "\n",
+      "score array mean:\n",
+      " 1.0\n",
+      "\n",
+      "score std dev:\n",
+      " 0.0\n",
+      "\n",
+      "runtime:\n",
+      " 1.8385549999999995 seconds\n"
      ]
     }
    ],
    "source": [
     "from sklearn import ensemble\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "rfc = ensemble.RandomForestClassifier()\n",
-    "rfc.fit(X_up_train, y_up_train)\n",
-    "scores_train = cross_val_score(rfc, X_up_train, y_up_train, cv=5)\n",
-    "print(scores_train)"
+    "start_time = time.clock()\n",
+    "rfc_up = ensemble.RandomForestClassifier().fit(X_up_train, y_up_train)\n",
+    "scores_train = cross_val_score(rfc_up, X_up_train, y_up_train, cv=5)\n",
+    "\n",
+    "print('score array:\\n', scores_train)\n",
+    "print('\\nscore array mean:\\n', np.mean(scores_train))\n",
+    "print('\\nscore std dev:\\n', np.std(scores_train))\n",
+    "print('\\nruntime:\\n',time.clock() - start_time, \"seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#X_up_test = df_upsampled.drop(['Class'], 1).sample(n=1000, replace=False)\n",
+    "#y_up_test = df_upsampled.Class.sample(n=1000, replace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 1. 1. 1. 1.]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "scores_test = cross_val_score(rfc, X_up_test, y_up_test, cv=5)\n",
-    "print(scores_test)"
+    "y_up_pred = rfc_up.predict(X_up_test)\n",
+    "y_up_prob = rfc_up.predict_proba(X_up_test)\n",
+    "\n",
+    "np.unique(y_up_pred)\n",
+    "#y_up_prob = [p[1] for p in y_up_prob]\n",
+    "#print(roc_auc_score(y_up_test, y_up_prob))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Only one class present in y_true. ROC AUC score is not defined in that case.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-1ceb3ec92deb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mroc_auc_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrfc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_up_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroc_auc_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_up_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/sklearn/metrics/ranking.py\u001b[0m in \u001b[0;36mroc_auc_score\u001b[0;34m(y_true, y_score, average, sample_weight)\u001b[0m\n\u001b[1;32m    275\u001b[0m     return _average_binary_score(\n\u001b[1;32m    276\u001b[0m         \u001b[0m_binary_roc_auc_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m         sample_weight=sample_weight)\n\u001b[0m\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/sklearn/metrics/base.py\u001b[0m in \u001b[0;36m_average_binary_score\u001b[0;34m(binary_metric, y_true, y_score, average, sample_weight)\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mbinary_metric\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/sklearn/metrics/ranking.py\u001b[0m in \u001b[0;36m_binary_roc_auc_score\u001b[0;34m(y_true, y_score, sample_weight)\u001b[0m\n\u001b[1;32m    266\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_binary_roc_auc_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    267\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 268\u001b[0;31m             raise ValueError(\"Only one class present in y_true. ROC AUC score \"\n\u001b[0m\u001b[1;32m    269\u001b[0m                              \"is not defined in that case.\")\n\u001b[1;32m    270\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Only one class present in y_true. ROC AUC score is not defined in that case."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import roc_auc_score\n",
     "y_pred = rfc.predict(X_up_test)\n",
