--- a/credit_card_fraud_revised.ipynb
+++ b/credit_card_fraud_revised.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    395\n",
+      "0    392\n",
+      "Name: Class, dtype: int64\n",
+      "0    100\n",
+      "1     97\n",
+      "Name: Class, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "y = df['Class']\n",
+    "X = df.loc[:, ~df.columns.isin(['Class'])]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2)\n",
+    "print(y_train.value_counts())\n",
+    "print(y_test.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -79,13 +107,13 @@
      "text": [
       "\n",
       "Best parameters:\n",
-      " {'learning_rate': 0.01, 'loss': 'exponential', 'max_depth': 3, 'n_estimators': 250}\n",
+      " {'learning_rate': 1, 'loss': 'exponential', 'max_depth': 3, 'n_estimators': 125}\n",
       "\n",
       "Best score:\n",
-      " 0.9390243902439024\n",
+      " 0.9504447268106735\n",
       "\n",
       "runtime:\n",
-      " 218.40638800000002 seconds\n"
+      " 50.990227999999995 seconds\n"
      ]
     }
    ],
@@ -93,19 +121,16 @@
     "from sklearn import ensemble\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "y = df['Class']\n",
-    "X = df.loc[:, ~df.columns.isin(['Class'])]\n",
-    "\n",
     "params = [{'loss':['deviance','exponential'],\n",
-    "           'learning_rate':[0.01, 0.1, 1, 10],\n",
-    "           'n_estimators':[250, 500, 750, 1000],\n",
+    "           'learning_rate':[0.01, 0.1, 1],\n",
+    "           'n_estimators':[125, 250, 500],\n",
     "           'max_depth':[2, 3, 4]}]\n",
     "\n",
     "clf = ensemble.GradientBoostingClassifier()\n",
     "grid = GridSearchCV(estimator=clf, param_grid=params)\n",
     "\n",
     "start_time = time.clock()\n",
-    "grid.fit(X, y)\n",
+    "grid.fit(X_train, y_train)\n",
     "print('\\nBest parameters:\\n', grid.best_params_)\n",
     "print('\\nBest score:\\n', grid.best_score_)\n",
     "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
@@ -113,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -121,38 +146,74 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.95959596 0.93939394 0.92346939 0.95408163 0.93877551]\n",
+      " [0.9556962  0.94303797 0.95541401 0.92356688 0.94904459]\n",
       "\n",
       "score array mean:\n",
-      " 0.9430632859204288\n",
+      " 0.9453519309844391\n",
       "\n",
       "AUROC score:\n",
-      " 0.9976328574261353\n",
+      " 1.0\n",
       "\n",
       "runtime:\n",
-      " 3.1496830000000102 seconds\n"
+      " 1.3219640000000012 seconds\n"
      ]
     }
    ],
    "source": [
+    "#train with best params\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "clf2 = ensemble.GradientBoostingClassifier(loss='exponential',\n",
-    "                                           learning_rate=0.01,\n",
-    "                                           n_estimators=250,\n",
+    "                                           learning_rate=0.1,\n",
+    "                                           n_estimators=125,\n",
     "                                           max_depth=3)\n",
     "start_time = time.clock()\n",
-    "clf2.fit(X, y)\n",
-    "scores_clf2 = cross_val_score(clf2, X, y, cv=5)\n",
+    "clf2.fit(X_train, y_train)\n",
+    "scores_clf2 = cross_val_score(clf2, X_train, y_train, cv=5)\n",
     "\n",
     "#AUROC score\n",
-    "prob_y = clf2.predict_proba(X)\n",
+    "prob_y = clf2.predict_proba(X_train)\n",
     "prob_y = [p[1] for p in prob_y]\n",
     "\n",
     "print('score array:\\n', scores_clf2)\n",
     "print('\\nscore array mean:\\n', np.mean(scores_clf2))\n",
-    "print('\\nAUROC score:\\n', roc_auc_score(y, prob_y))\n",
+    "print('\\nAUROC score:\\n', roc_auc_score(y_train, prob_y))\n",
+    "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.925      0.85       0.97435897 0.92307692 0.8974359 ]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.913974358974359\n",
+      "\n",
+      "AUROC score:\n",
+      " 0.9702061855670102\n",
+      "\n",
+      "runtime:\n",
+      " 2.194814000000001 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "#run on test set\n",
+    "scores_clf2_test = cross_val_score(clf2, X_test, y_test, cv=5)\n",
+    "prob_y_test = clf2.predict_proba(X_test)\n",
+    "prob_y_test = [p[1] for p in prob_y_test]\n",
+    "\n",
+    "print('score array:\\n', scores_clf2_test)\n",
+    "print('\\nscore array mean:\\n', np.mean(scores_clf2_test))\n",
+    "print('\\nAUROC score:\\n', roc_auc_score(y_test, prob_y_test))\n",
     "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
    ]
   },
